force-app/main/default/objects/acheck__ChecklistInstance__c/acheck__ChecklistInstance__c.object-meta.xml
<CustomObject>
    <description>Checklist Instance - automatically maintained</description>
    <label>Checklist Instance</label>
    <nameField>
        <displayFormat>CI-{YY}-{000000}</displayFormat>
        <label>Checklist Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>