force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__Account__c.field-meta.xml
<CustomField>
    <fullName>acheck__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Account if checklist is related to an Account</description>
    <inlineHelpText>Link to Account if checklist is related to an Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Checklist Instances</relationshipLabel>
    <relationshipName>Checklist_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>