force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__ActiveCount__c.field-meta.xml
<CustomField>
    <fullName>acheck__ActiveCount__c</fullName>
    <description>Number of tasks started (but not completed and not waiting)</description>
    <inlineHelpText>Number of tasks started (but not completed and not waiting)</inlineHelpText>
    <label>Active Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>