force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__Checklist__c.field-meta.xml
<CustomField>
    <fullName>acheck__Checklist__c</fullName>
    <description>Parent</description>
    <inlineHelpText>Parent</inlineHelpText>
    <label>Checklist</label>
    <referenceTo>acheck__CheckList__c</referenceTo>
    <relationshipLabel>Checklist Instances</relationshipLabel>
    <relationshipName>Checklist_Instances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>