force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__ClosedCount__c.field-meta.xml
<CustomField>
    <fullName>acheck__ClosedCount__c</fullName>
    <description>Number of Tasks Closed</description>
    <inlineHelpText>Number of Tasks Closed</inlineHelpText>
    <label>Closed Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>