force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>acheck__ClosedDate__c</fullName>
    <description>Date/Time the last Task closed</description>
    <inlineHelpText>Date/Time the last Task closed</inlineHelpText>
    <label>Actual Close</label>
    <type>DateTime</type>
</CustomField>