force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__Description__c.field-meta.xml
<CustomField>
    <fullName>acheck__Description__c</fullName>
    <description>Optional Description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>