force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__Duration__c.field-meta.xml
<CustomField>
    <fullName>acheck__Duration__c</fullName>
    <description>Duration - when closed, the number of days from the actual start to the end; 
when not closed, the number of days from the actual start to now;
when not started - null</description>
    <formula>IF(IsNull(acheck__StartedDate__c), null, 
  IF(IsNull(acheck__ClosedDate__c), (NOW() - acheck__StartedDate__c), (acheck__ClosedDate__c - acheck__StartedDate__c)) 
)</formula>
    <inlineHelpText>Duration - when closed, the number of days from the actual start to the end; 
when not closed, the number of days from the actual start to now;
when not started - null</inlineHelpText>
    <label>Duration (days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>