force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__IsCreate_Recurring__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsCreate_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create the next Recurring Instance (if defined in Checklist)</description>
    <inlineHelpText>Create the next Recurring Instance (if defined in Checklist)</inlineHelpText>
    <label>Create Recurring</label>
    <type>Checkbox</type>
</CustomField>