force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__OpenCount__c.field-meta.xml
<CustomField>
    <fullName>acheck__OpenCount__c</fullName>
    <description>Number of tasks not closed</description>
    <formula>acheck__TaskCount__c - acheck__ClosedCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of tasks not closed</inlineHelpText>
    <label>Open Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>