force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>acheck__PercentComplete__c</fullName>
    <description>Closed Tasks in Percent based on TaskCount, ClosedCount</description>
    <formula>IF( acheck__TaskCount__c == 0, 0, 
 acheck__ClosedCount__c / acheck__TaskCount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Closed Tasks in Percent</inlineHelpText>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>