force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__Recurring_OffsetDate__c.field-meta.xml
<CustomField>
    <fullName>acheck__Recurring_OffsetDate__c</fullName>
    <description>Date calculated by Recurring Offset days - the date when the next recurring set of tasks should be created.</description>
    <inlineHelpText>Date calculated by Recurring Offset days - the date when the next recurring set of tasks should be created.</inlineHelpText>
    <label>Recurring Offset Date</label>
    <type>Date</type>
</CustomField>