force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__Related__c.field-meta.xml
<CustomField>
    <fullName>acheck__Related__c</fullName>
    <description>Link to Related Record based on RelatedObject, RelatedName, Id</description>
    <formula>IF(acheck__RelatedId__c = null, acheck__RelatedObject__c,
 HYPERLINK(&apos;/&apos; &amp; acheck__RelatedId__c, 
  IF(ISBLANK(acheck__RelatedName__c), acheck__RelatedObject__c, acheck__RelatedName__c), &apos;source&apos;))</formula>
    <inlineHelpText>Link to Related Record</inlineHelpText>
    <label>Related</label>
    <type>Text</type>
</CustomField>