force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__RelatedId__c.field-meta.xml
<CustomField>
    <fullName>acheck__RelatedId__c</fullName>
    <description>Record Id of the Related Record</description>
    <inlineHelpText>Record Id of the Related Record</inlineHelpText>
    <label>Related Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>