force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__RelatedName__c.field-meta.xml
<CustomField>
    <fullName>acheck__RelatedName__c</fullName>
    <description>Related Object Name</description>
    <inlineHelpText>Related Object Name</inlineHelpText>
    <label>Related Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>