force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__RelatedObject__c.field-meta.xml
<CustomField>
    <fullName>acheck__RelatedObject__c</fullName>
    <description>Related Object Name</description>
    <inlineHelpText>Related Object</inlineHelpText>
    <label>Related Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>