force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__StartDelay__c.field-meta.xml
<CustomField>
    <fullName>acheck__StartDelay__c</fullName>
    <description>Created Date does not have time</description>
    <formula>IF (IsNull(acheck__StartedDate__c), (NOW() - CreatedDate), 
 IF(acheck__StartedDate__c - CreatedDate &lt; 0, 0, acheck__StartedDate__c - CreatedDate))</formula>
    <inlineHelpText>When started, the number of days from creation to start;
when not started - number of days from creatin to now</inlineHelpText>
    <label>Start Delay (days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>