force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__StartedDate__c.field-meta.xml
<CustomField>
    <fullName>acheck__StartedDate__c</fullName>
    <description>Date/Time the Checklist Instance started (first action)</description>
    <inlineHelpText>Date/Time the Checklist Instance started (first action)</inlineHelpText>
    <label>Actual Start</label>
    <type>DateTime</type>
</CustomField>