force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__Status__c.field-meta.xml
<CustomField>
    <fullName>acheck__Status__c</fullName>
    <description>Based on TaskCount, ClosedCount, ActiveCount</description>
    <formula>IF (acheck__ClosedCount__c ==  acheck__TaskCount__c, &apos;Closed&apos;,
 IF(acheck__ActiveCount__c &gt; 0, &apos;Active&apos;, &apos;Waiting&apos;)
)</formula>
    <inlineHelpText>Closed | Active | Waiting</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>