force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>acheck__TargetDate__c</fullName>
    <description>Future Target Date to calculate the Task Due Date from if Date Offset Days &lt; 0
- change impacts future Tasks only</description>
    <inlineHelpText>Future Target Date to calculate the Task Due Date from if Date Offset Days &lt; 0
- change impacts future Tasks only</inlineHelpText>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>