force-app/main/default/objects/acheck__ChecklistInstance__c/fields/acheck__TaskCount__c.field-meta.xml
<CustomField>
    <fullName>acheck__TaskCount__c</fullName>
    <description>Number of Tasks (total)</description>
    <inlineHelpText>Number of Tasks (total)</inlineHelpText>
    <label>Task Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>